examples/test/testpolicy8506.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8506
  namespace: namespace280
spec:
  podSelector:
    matchLabels:
      key11: value45
      key32: value19
      key35: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value1
      podSelector:
        matchLabels:
          key11: value28
